objects/vlocity_cmt__VersionAwareObjectRelationship__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__DestinationIdKey__c</fullName>
        <description>This key is used with Many to Many Relationship to query on junction objects.</description>
        <label>Destination Identifier Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationObject__c</fullName>
        <description>This is the destination object of the relationship query.</description>
        <label>Destination Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InterfaceKey__c</fullName>
        <description>This key identifies relationship objects to be retrieved as part of query execution.</description>
        <label>Interface Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JunctionObject__c</fullName>
        <description>This field contains the junction object name in case of a Many to Many relationship and is required for this relationship type.</description>
        <label>Junction Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipName__c</fullName>
        <description>This key specifies the relationship name in case of One to Many and Many to One relationship and is required for these relationship types.</description>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <description>This picklist contains relationship types, e.g. One to Many, Many to One, Many to Many and Child Products from Datastore.</description>
        <label>Relationship Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One to Many</fullName>
                    <default>true</default>
                    <label>One to Many</label>
                </value>
                <value>
                    <fullName>Many to One</fullName>
                </value>
                <value>
                    <fullName>Many to Many</fullName>
                </value>
                <value>
                    <fullName>Child Products from Datastore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceIdKey__c</fullName>
        <description>This key is used in Many to Many Relationship to query on junction objects.</description>
        <label>Source Identifier Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceObject__c</fullName>
        <description>This is the source object of the relationship query.</description>
        <label>Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionFilter__c</fullName>
        <description>This field contains version filter key i.e. attribute and operator as key to filter records.</description>
        <label>Version Filter</label>
        <type>TextArea</type>
    </fields>
    <label>VersionAwareObjectRelationship</label>
    <pluralLabel>VersionAwareObjectRelationship</pluralLabel>
</CustomObject>